# clash2linux

./: Cargo.toml  README.md
scripts/: install.sh
src/: cli.rs  lib.rs  main.rs
src/cmd/: mod.rs  start.rs  status.rs  stop.rs  subscribe.rs  tui.rs  update_core.rs
src/core/: arch.rs  consts.rs  download.rs  install.rs  mihomo_config.rs  mod.rs  proxy.rs  systemd.rs
tests/: arch_test.rs  download_test.rs  install_test.rs  integration_test.rs  proxy_test.rs  subscribe_test.rs
